--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "angular-in-memory-web-api": "^0.5.2",
     "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-tagsinput": "^0.7.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
